# xagima

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  bochsrc.txt  compile_flags.txt  grub.cfg  x86_64-xagima.json
.cargo/: config.toml
src/: Makefile  gdt.rs  heap.rs  interrupts.rs  lib.rs  main.rs  memory.rs  pci.rs  print.rs  serial.rs  test_harness.rs  testing.rs  vga.rs
src/arch/i686/: boot.S  crti.S  crtn.S  linker.ld  make.config
src/arch/i686/device/: device_manager.cpp
src/arch/i686/device/net/: e1000.h
src/arch/i686/device/pci/: pci.h  pci_primitives.h
src/arch/i686/device/timer/: timer.h
src/arch/i686/i686/: descriptors.S  descriptors.h  gdt.h  i686.cpp  idt.h  interrupt_frame.h
src/arch/i686/include/: io.h
src/arch/i686/mm/: mm.cpp
src/arch/i686/tty/: tty.cpp
src/include/: cpu.h  errno.h  mm.h  multiboot.h  stdlib.h
src/include/device/: device_manager.h
src/include/tty/: tty.h
src/include/utils/: array.h  ostream.h  singleton.h
src/kernel/: abort.cpp  errno.cpp  gcc.cpp  kernel.cpp  malloc.c  sbrk.cpp  string.cpp
src/net/: e1000.rs  mod.rs  ne2k_pci.rs
sysroot/usr/include/: assert.h  mm.h  string.h
sysroot/usr/include/tty/: tty.h
sysroot/usr/include/utils/: singleton.h
tests/: double_fault.rs  normal_tests.rs  simple_interrupt.rs  triple_fault.rs  trivial_test.rs
tools/: dump-asm  qemu-iso.sh  qemu.sh
