[package]
name = "xagima"
version = "0.1.0"
edition = "2021"

[dependencies]
bootloader = "0.9.8"
voladdress = "1.0.2"
spin = "0.9.2"
x86_64 = "0.14.2"
uart_16550 = "0.2.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[profile.dev]
# panic = "abort"

[profile.release]
# panic = "abort"

[package.metadata.bootimage]
run-command = ["qemu-system-x86_64", "-drive", "format=raw,file={}", "-net", "nic,model=e1000", "-serial", "stdio"]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-display", "none"]
test-success-exit-code = 33
